[package]
name = "hosttui"
version = "0.1.0"
edition = "2024"
description = "A TUI to manage SSH configuration: browse hosts, organize them in groups, and connect"
license = "MIT"
repository = "https://github.com/yagoliz/confitui"
keywords = ["ssh", "tui", "terminal", "config"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
