[package]
name = "hosttui"
version = "0.1.4"
edition = "2024"
description = "A TUI to manage SSH configuration: browse hosts, organize them in groups, and connect"
license = "MIT"
repository = "https://github.com/yagoliz/hosttui"
keywords = ["ssh", "tui", "terminal", "config"]
categories = ["command-line-utilities"]

[[bin]]
name = "ht"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tui-input = "0.15.3"
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3.27.0"
